--- a/Salesforce Inspector Extension/Resources/popup.html
+++ b/Salesforce Inspector Extension/Resources/popup.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="popup.css">
+    <script src="react.js"></script>
+    <script src="react-dom.js"></script>
     <script type="module" src="popup.js"></script>
 </head>
 <body>
-    <strong>Hello World!</strong>
-</body>
+    <div id="root"></div>
+  </body>
 </html>
